# cognis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cognis/: __init__.py  config.py  memory.py  models.py  utils.py
cognis/embeddings/: base.py  gemini.py
cognis/extraction/: extractor.py  prompts.py
cognis/search/: pipeline.py  temporal.py
cognis/stores/: qdrant_store.py  sqlite_store.py
tests/: conftest.py  test_context.py  test_extraction.py  test_memory.py  test_search.py  test_stores.py
