[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyzr-memory-lite"
version = "0.1.0"
description = "Lightweight Cognis, local-first memory for LLM agents"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.12.0",
    "litellm>=1.50.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["cognis*"]
