[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyzr-cognis"
version = "0.1.0"
description = "Lightweight Cognis, local-first memory for LLM agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lyzr AI", email = "contact@lyzr.ai"},
]
keywords = ["memory", "llm", "ai", "agents", "rag", "cognis", "lyzr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "qdrant-client>=1.12.0",
    "litellm>=1.50.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "python-dotenv>=1.0.0"]

[project.urls]
Homepage = "https://github.com/Lyzr-Cognis/cognis"
Repository = "https://github.com/Lyzr-Cognis/cognis"
Issues = "https://github.com/Lyzr-Cognis/cognis/issues"

[tool.setuptools.packages.find]
include = ["cognis*"]
